components/wild-west-frontend/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: purple-mermaid-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: wild-west-frontend
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elwild-west-frontend
  namespace: pdave
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-wild-west-frontend
    weight: null
status: {}
